--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
         <div class="best-movie" id="box">
             <div class="best-movie--pres1--title" id="best-movie--title">Title</div>
+            <button class="btn-open" id="best-movie--button">see info</button>
             <div class="best-movie--pres1--summary" id="best-movie--summary"></div>
             <img src="godfather.jfif" alt="best rated movie on IMDB" class="best-movie--pres1--image" id="best-movie--image">
-            <button class="btn-open">see info</button>
         </div>
 
         <div class="modal">
@@ -83,8 +83,8 @@
             <div class="best-movies--pres2 presentation-box">
                 <img src="#" alt="one of the best rated movies on IMDB" class="best-movies--pres2--image">
                 <div class="best-movies--pres2--title"><h3>Title</h3></div>
-                <div class="best-movies--pres2--summary"></div>
                 <button class="btn-open">see info</button>    
+                <div class="best-movies--pres2--summary"></div>
             </div>
 
             <div class="modal">
