--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="best-movie--pres1--title" id="best-movie--title">Title</div>
             <button class="btn-open" id="best-movie--button">see info</button>
             <div class="best-movie--pres1--summary" id="best-movie--summary"></div>
-            <img src="godfather.jfif" alt="best rated movie on IMDB" class="best-movie--pres1--image" id="best-movie--image">
+            <img src="#" alt="best rated movie on IMDB" class="best-movie--pres1--image" id="best-movie--image">
         </div>
 
         <div class="modal">
