--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     <div class="main">
 
         <div class="best-movie" id="box">
-            <div class="best-movie--pres1--title" id="best-movie--title">Title</div>
-            <button class="btn-open" id="best-movie--button">see info</button>
-            <div class="best-movie--pres1--summary" id="best-movie--summary"></div>
+            <div class="top-info">
+                <div class="best-movie--pres1--title" id="best-movie--title">Title</div>
+                <button class="btn-open" id="best-movie--button">see info</button>
+                <div class="best-movie--pres1--summary" id="best-movie--summary"></div>
+            </div>
             <img src="#" alt="best rated movie on IMDB" class="best-movie--pres1--image btn-open-img" id="best-movie--image">
         </div>
     
